tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-match-payload.wyst
module demo
enum State { payload(u64) }
fn main(state: State) { match state { .payload(widen) {} } }
